test/errors/incompatibleKinds.future
feature request: preserve type aliasing information for error
